# gitit

./: Cargo.toml  README.md  nohup.out
src/: cache.rs  controller.rs  domain.rs  global.rs  lib.rs  main.rs  terminal.rs  utils.rs
src/controller/: cursor.rs  index.rs  models.rs  state.rs
src/global/: constants.rs  cursor.rs  models.rs  state.rs
src/terminal/: keying.rs  render.rs  ui.rs
src/terminal/ui/: buttons.rs  commit_msg.rs  diffs.rs  files.rs  parent.rs
src/terminal/ui/files/: buttons.rs
tests/: integration.rs
