[package]
name = "gitit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
enigo = "0.1.2"
event-emitter-rs = "0.1.4"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
regex = "1.9.3"
serde = "1.0.188"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
